@startuml

title __SUPERRAINBOWREEF's Class Diagram__\n

  namespace src {
    class Control {
    }
  }
  

  namespace  {
    class Game {
    }
  }
  

  namespace  {
    abstract class GameObj {
    }
  }
  

  namespace  {
    class Katch {
    }
  }
  

  namespace  {
    class Pop {
    }
  }
  

  namespace  {
    class Wall {
    }
  }
  

  Control .up.|> java.awt.event.KeyListener
  Control o-- Katch : catcher
  Game -up-|> javax.swing.JPanel
  Game o-- Katch : catcher
  Game o-- Control : cntrl
  Game o-- Pop : pop
  Katch -up-|> GameObj
  Pop -up-|> GameObj
  Wall -up-|> GameObj


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
